Deleted Back Links, added AR Tours

--- a/VR-Tours/cassidy_arch_tour/index.html
+++ b/VR-Tours/cassidy_arch_tour/index.html
@@ -36,11 +36,11 @@
 	</head>
 	<body>
 		<header id="VR-tour-header">
-			<div id="link">
+			<!-- <div id="link">
 			  <a href="../../pages/vr-tours.html">
 				<img src="../../images/outline_arrow_back_ios_white_36dp.png" alt="back">
 			  </a>
-			</div>
+			</div> -->
 			<div id="title">
 			  <h2>Cassidy Arch</h2>
 			</div>
