--- a/VR-Tours/field_station_and_rainbow_ranch_tour/index.html
+++ b/VR-Tours/field_station_and_rainbow_ranch_tour/index.html
@@ -36,14 +36,14 @@
 	</head>
 	<body>
 		<header id="VR-tour-header">
-			<div id="link">
+			<!-- <div id="link">
 			  <a href="../../pages/ranch.html">
 				<img
 				  src="../../images/outline_arrow_back_ios_white_36dp.png"
 				  alt="back"
 				/>
 			  </a>
-			</div>
+			</div> -->
 			<div id="title">
 			  <h2>Field Station Tour</h2>
 			</div>
