--- a/VR-Tours/capitol_gorge_tour/index.html
+++ b/VR-Tours/capitol_gorge_tour/index.html
@@ -39,14 +39,14 @@
   </head>
   <body>
 	<header id="VR-tour-header">
-		<div id="link">
+		<!-- <div id="link">
 		  <a href="../../pages/vr-tours.html">
 			<img
 			  src="../../images/outline_arrow_back_ios_white_36dp.png"
 			  alt="back"
 			/>
 		  </a>
-		</div>
+		</div> -->
 		<div id="title">
 		  <h2>Capitol Gorge</h2>
 		</div>
